# really

./: .env.example  Cargo.toml  README.md  table.sql
src/: app.rs  main.rs
src/endpoints/: by.rs  meta.rs  mod.rs  random.rs
src/endpoints/v1/: asset.rs  by.rs  mod.rs
src/endpoints/v2/: img.rs
src/utils/: database.rs  image.rs  mod.rs  status_code.rs
static/: random-waifus.html
